# chromo

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  F2Py.cmake  FLUKA_QUESTIONS.md  FindPythonLibsNew.cmake  ImpyDevBuilds.cmake  ImpyDevSettings.cmake  LICENSE  MANIFEST.in  Makefile  README.md  WriteRoot.ipynb  build_f2py.py  cmake_ext.py  cmake_ext.py.bak  default_models.cfg  dev_settings.py  download_data.py  dpmjetIII191_workaround.py  generate_f2py.py  get_version.py  impy_complex_interface_guide.ipynb  impy_config.yaml  impy_simple_interface_guide.ipynb  impy_simple_interface_guide_UrQMD.ipynb  meson.build  mkdocs.yml  model.cfg  patch_local_numpy_f2py.py  patch_numpy.py  plan_windows_builds.md  pyproject.toml  requirements.txt  setup.cfg  (+2 more)
.claude/: settings.local.json
.github/workflows/: build.yml  claude-code-review.yml  get_env.py  release.yml  test.yml  test_windows.yml
InteractionModels/: common.py  dpmjetII.py  dpmjetIII.py  epos.py  phojet.py  pythia6.py  qgsjet.py  sibyll.py  sophia.py
WIP_pythia8_cascade/: README_pythia_cascade_python.md  atmospheric_cascade_example.py  pythia8_cascade.md  pythia_cascade_python.py
bench/: crmc_comparison.ipynb  test_event.py  test_io.py  test_new_event.py  test_old_event.py
doc/: dev_docs.md
docs/: architecture.md  citation.md  index.md
docs/api/: cli.md  common.md  kinematics.md  models.md  writer.md
docs/getting-started/: building-with-fluka.md  first-simulation.md  installation.md
docs/models/: dpmjet-phojet.md  fluka.md  overview.md  pythia8-guide.md  sibyll-variants.md
docs/user-guide/: cross-sections.md  decay-handling.md  kinematics.md  output-formats.md  running-a-generator.md  working-with-events.md
examples/: Pythia8.ipynb  compare_models.ipynb  compare_two_models.ipynb  count_final_state_particles.ipynb  cross_section.ipynb  decayhandler.ipynb  dpmjetIII_test.ipynb  dpmjetIII_verify.ipynb  fluka_decay.ipynb  fluka_dpmjet_residual_nuclei.ipynb  gamma_gamma_example.ipynb  gamma_p.ipynb  hepmc.ipynb  hepmc_io_and_visualization.ipynb  hepmc_output.ipynb  hyperon_feed_down.ipynb  make_phi.py  nuclear_cross_sections.ipynb  phi.ipynb  plot_tests.ipynb  pythia8_test.ipynb  tuning.ipynb  urqmd_devel.ipynb  write_root.ipynb
examples/pythia8_tuning_parameter_impact/: get_all_tuning_parameters.ipynb  parms.json
impy/: __init__.py  common.py  common.py.bak  constants.py  definitions.py  epos.py  impy_config.yaml  kinematics.py  kinematics.py.bak  phojet.py  qgsjet.py  sibyll.py  sophia.py  urqmd_module.py  util.py  util.py.bak  writer.py  writer.py.bak
impy/frontend/: cli.py  selectors.py  triggers.py
impy/models/: __init__.py  dpmjetII.py  dpmjetII.py.bak  dpmjetIII.py  dpmjetIII.py.bak  epos.py  phojet.py  phojet.py.bak  pythia6.py  pythia6.py.bak  pythia8.py  pythia8.py.bak  qgsjet.py  sibyll.py  sophia.py  sophia.py.bak  urqmd.py  urqmd_module.py
impy/tests/: compare_two_models.ipynb  dpmjetIII_test.ipynb  misc_test_func.py  test_all_cms.py  test_all_lab.py  test_decay_afterburner.py  test_event_generator.py  test_hepmc_writer.py  test_new_interface.py  test_setunstable.py  test_sibyll.py  test_urqmd.py
impy/utils/: units.py
lib/: .gitignore
obsolete/: CMakeLists.txt  default_models.cfg  dpmjetIII.bak.txt  dpmjetIII191_workaround.py  generators.py  histograms.py  impy_complex_interface_guide.ipynb  impy_simple_interface_guide_UrQMD.ipynb  patch_local_numpy_f2py.py  phojet_removed.py  removed_funcs.py  removed_sibyll_stuff.py  setup.cfg.bak
obsolete/utils/: histogram.py
scripts/: download_data.py  generate_angantyr_tables.py  generate_f2py.py  get_models.py  get_version.py  install_fluka.sh  list_cc_files.py  list_dpmjet_sources.py  list_epos_sources.py  list_eposlhcr_sources.py  list_urqmd_sources.py  normalize_charset.py  patch_local_numpy_f2py.py  test_angantyr.py  write_source_list.py
src/: Makefile  impy_boosts.f  logging.f  rangen.f  rangen.fpp
src/EPOS-LHC/: Makefile  epos-bas-lhc.f  eposlhc.pyf
src/chromo/: __init__.py  __main__.py  cli.py  cli_log.py  common.py  constants.py  decay_afterburner.py  decay_handler.py  kinematics.py  util.py  writer.py
src/cpp/: _pythia8.cpp  _util.cpp  private_access.hpp
src/fortran/epos-lhc-r/sources/: CMakeLists.txt  ak.h  al.cpp  epos-af.f  epos-bas.f  epos-con.f  epos-dky.f  epos-dro.f  epos-ems.f  epos-fra.f  epos-hg.f  epos-hnb.f  epos-ico.f  epos-ids.f  epos-int.f  epos-jps.f  epos-omg.f  epos-par.f  epos-qsh.f  epos-rsh.f  epos-sem.f  epos-tim.f  epos-uti.f  epos-xan.f  epos-xpr.f  epos.inc  epos.incems  epos.incho  epos.inchy  epos.incico  epos.incsem  epos.incxan  epos_interface.f  epos_j.f  eposm.f  timer.c  urqmdepos.f
src/fortran/epos-lhc-r/sources/urqmd34/: addpart.f  angdis.f  anndec.f  blockres.f  boxprg.f  cascinit.f  colltab.f  coload.f  comnorm.f  comres.f  coms.f  comstr.f  comwid.f  dectim.f  delpart.f  detbal.f  dwidth.f  getmass.f  getspin.f  hepchg.f  hepcmp.f  hepnam.f  init.f  input.f  inputs.f  iso.f  ityp2pdg.f  jdecay2.f  make22.f  newpart.f  options.f  output.f  proppot.f  saveinfo.f  scatter.f  siglookup.f  string.f  tabinit.f  uaaa.f  upmerge.f  (+2 more)
src/pyhepmc/: CMakeLists.txt  main.cpp
src/pyhepmc/tests/: test_pyhepmc.py
tests/: compare_two_models.ipynb  dpmjetIII_test.ipynb  fixme_all_cms.py  fixme_all_lab.py  fixme_decay_afterburner.py  fixme_dpmjetIII.py  fixme_eposlhc.py  fixme_hepmc_writer.py  fixme_phojet.py  fixme_setunstable.py  fixme_test_hepmc_io.py  fixme_urqmd.py  macos_test_impy.py  misc_test_func.py  plot_tests.ipynb  test_all_cms.py  test_all_lab.py  test_cascade_run.py  test_cli.py  test_common.py  test_comp_target.py  test_composite_target.py  test_cross_section.py  test_cross_sections.py  test_decay_afterburner.py  test_decay_handler.py  test_dpmjetIII.py  test_epos.py  test_eposlhc.py  test_event_generator.py  test_final_state.py  test_fluka.py  test_fluka_decay.py  test_generators.py  test_get_particles.py  test_hepmc_io.py  test_hepmc_writer.py  test_kinematics.py  test_mass_shell.py  test_models.ipynb  (+28 more)
(+729 files in other folders)
